Make sure instructions are not visible in fullscreen mode.

--- a/theme/common.less
+++ b/theme/common.less
@@ -1416,6 +1416,9 @@ p.ui.font.small {
         display: none !important;
         z-index: -10 !important;
     }
+    #tutorialWrapper {
+        display: none;
+    }
     .sandboxfooter {
         z-index: @sandboxFooterZIndex;
         bottom: 1rem;
